# EukariotSDL2

./: .gitmodules  CMakeLists.txt  LUtil.cpp  README.md  main.cpp
headers/: LOpenGL.h  LUtil.h  shader.h
src/shaders/: shader.fs  shader.vs
